--- a/style.css
+++ b/style.css
@@ -182,3 +182,44 @@ body {
 .attribution a {
   color: hsl(228, 45%, 44%);
 }
+
+/* MOBILE */
+@media only screen and (max-width: 375px) {
+  body {
+    background-image: url(images/bg-mobile.png);
+    background-position: center;
+    background-size: cover;
+  }
+
+  .main-container {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 0;
+  }
+
+  .logo-container {
+    flex: 0 0 auto;
+    align-self: stretch;
+  }
+
+  .storage-container {
+    margin-left: 0;
+    margin-top: 20px;
+    padding-bottom: 50px;
+  }
+
+  .message {
+    /* position: relative; */
+    right: 50%;
+    top: 50%;
+    transform: translate(50%, 50%);
+  }
+
+  .message::after {
+    display: none;
+  }
+
+  .range {
+    width: 250px;
+  }
+}
